tracker-lwc/force-app/main/default/objects/Tracker_View__c/Tracker_View__c.object-meta.xml
<CustomObject>
    <description>Stores configuration for Tracker grid views (columns, filters, formatting rules)</description>
    <label>Tracker View</label>
    <nameField>
        <label>View Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tracker Views</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>