tracker-lwc/force-app/main/default/objects/Tracker_View__c/fields/Config__c.field-meta.xml
<CustomField>
    <fullName>Config__c</fullName>
    <description>JSON configuration for view columns, filters, sorting, and formatting rules</description>
    <label>Config</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>