tracker-lwc/force-app/main/default/objects/Tracker_View__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls whether this view appears in the view selector dropdown</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>