tracker-lwc/force-app/main/default/objects/Tracker_View__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description>API name of the primary object this view queries</description>
    <label>Object</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>